[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/Awake.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://dialog/menu_section_9patch.png" type="Texture" id=2]
[ext_resource path="res://ui/test_ui/test_menu.gd" type="Script" id=3]
[ext_resource path="res://dialog/ChoiceButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/test_ui/caret.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="TestingMenu" type="NinePatchRect"]
pause_mode = 2
margin_left = 71.0
margin_top = 383.0
margin_right = 413.0
margin_bottom = 546.0
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 354.931 ],
"_edit_use_anchors_": false
}
ChoiceButton = ExtResource( 4 )

[node name="PopUp" type="AudioStreamPlayer" parent="."]

[node name="Select" type="AudioStreamPlayer" parent="."]

[node name="ChoicePos" type="Position2D" parent="."]
position = Vector2( 318.388, 108.414 )

[node name="Text" type="RichTextLabel" parent="."]
anchor_left = 0.131
anchor_top = 0.254
anchor_right = 0.131
anchor_bottom = 0.331
margin_left = 0.198002
margin_top = -0.402
margin_right = 265.198
margin_bottom = 100.047
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Who do you want to test?"
text = "Who do you want to test?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeclineButton" parent="." instance=ExtResource( 4 )]
margin_left = 309.903
margin_top = 145.0
margin_right = 616.703
margin_bottom = 172.0
focus_next = NodePath("../Buttons")
focus_previous = NodePath("../Buttons")

[node name="Details" type="NinePatchRect" parent="."]
margin_left = -7.63004
margin_top = -172.694
margin_right = 342.37
margin_bottom = -22.6939
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Details"]
margin_left = 19.0488
margin_top = 16.6677
margin_right = 281.049
margin_bottom = 122.668
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharName" type="HBoxContainer" parent="Details/VBoxContainer"]
margin_right = 262.0
margin_bottom = 25.0
rect_min_size = Vector2( 40, 25 )

[node name="Label" type="Label" parent="Details/VBoxContainer/CharName"]
margin_right = 94.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Full Name:"

[node name="Details" type="Label" parent="Details/VBoxContainer/CharName"]
margin_left = 98.0
margin_right = 262.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 25 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "jasldfiahnf ;ksldfj"

[node name="Home" type="HBoxContainer" parent="Details/VBoxContainer"]
margin_top = 35.0
margin_right = 262.0
margin_bottom = 57.0

[node name="Label" type="Label" parent="Details/VBoxContainer/Home"]
margin_right = 60.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Home: "

[node name="Details" type="Label" parent="Details/VBoxContainer/Home"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1B"

[node name="Work" type="HBoxContainer" parent="Details/VBoxContainer"]
margin_top = 67.0
margin_right = 262.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="Details/VBoxContainer/Work"]
margin_right = 60.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Work: "

[node name="Details" type="Label" parent="Details/VBoxContainer/Work"]
margin_left = 64.0
margin_right = 162.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Factory 2"

[node name="LastTested" type="HBoxContainer" parent="Details/VBoxContainer"]
margin_top = 99.0
margin_right = 262.0
margin_bottom = 121.0

[node name="Label" type="Label" parent="Details/VBoxContainer/LastTested"]
margin_right = 172.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Date last tested: "

[node name="Details" type="Label" parent="Details/VBoxContainer/LastTested"]
margin_left = 176.0
margin_right = 184.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"

[node name="Sprite" type="Sprite" parent="Details"]
visible = false
position = Vector2( -9.53516, 131.903 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="BuildingName" type="NinePatchRect" parent="."]
margin_left = -7.63005
margin_top = -10.1352
margin_right = 42.37
margin_bottom = 14.8648
rect_min_size = Vector2( 50, 25 )
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BuildingName"]
margin_top = 4.0
margin_right = 72.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Building"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="is_pressed" from="DeclineButton" to="." method="_on_DeclineButton_is_pressed"]
